# hashpkg

./: LICENSE  README.md  pyproject.toml
hashpkg/: hashpkg.py
